[package]
name = "pteropus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "~1.0"
tokio = {version="~1.17", features=["rt-multi-thread", "macros"]}
tokio-util = {version="~0.7", features=["io"]}
reqwest = {version="~0.11", features=["json", "stream"]}
proj = "~0.25"
geo-types = "~0.7"
clap = {version="~3.1", features=["derive"]}
anyhow = "~1.0"
futures = "~0.3"
bytes = "~1.1"
las = {version="~0.7", features=["laz"]}